dataset1235/2025-2/1153765216/users/2719941446/executions/2372395858_2332513434.log
== RUN (2025-08-28 18:29:19)
-- CODE: 
valor_d=float(input("Valor em coroas dinamarquesas:"))

valor_r:valor_d*0.7

print(round(valor_r,2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor_r,2))
                ^^^^^^^
NameError: name 'valor_r' is not defined. Did you mean: 'valor_d'?
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor_r,2))
                ^^^^^^^
NameError: name 'valor_r' is not defined. Did you mean: 'valor_d'?
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor_r,2))
                ^^^^^^^
NameError: name 'valor_r' is not defined. Did you mean: 'valor_d'?
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor_r,2))
                ^^^^^^^
NameError: name 'valor_r' is not defined. Did you mean: 'valor_d'?
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor_r,2))
                ^^^^^^^
NameError: name 'valor_r' is not defined. Did you mean: 'valor_d'?
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor_r,2))
                ^^^^^^^
NameError: name 'valor_r' is not defined. Did you mean: 'valor_d'?
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor_r,2))
                ^^^^^^^
NameError: name 'valor_r' is not defined. Did you mean: 'valor_d'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:29:13)
-- CODE: 
valor_d=float(input("Valor em coroas dinamarquesas:"))

valor_r:valor_d*0.7

print(round(valor_r,2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor_r,2))
                ^^^^^^^
NameError: name 'valor_r' is not defined. Did you mean: 'valor_d'?
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor_r,2))
                ^^^^^^^
NameError: name 'valor_r' is not defined. Did you mean: 'valor_d'?
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor_r,2))
                ^^^^^^^
NameError: name 'valor_r' is not defined. Did you mean: 'valor_d'?
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor_r,2))
                ^^^^^^^
NameError: name 'valor_r' is not defined. Did you mean: 'valor_d'?
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor_r,2))
                ^^^^^^^
NameError: name 'valor_r' is not defined. Did you mean: 'valor_d'?
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor_r,2))
                ^^^^^^^
NameError: name 'valor_r' is not defined. Did you mean: 'valor_d'?
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor_r,2))
                ^^^^^^^
NameError: name 'valor_r' is not defined. Did you mean: 'valor_d'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:29:02)
-- CODE: 
valor_d=float(input("Valor em coroas dinamarquesas:"))

valor_r:valor_d*0,7

print(round(valor_r,2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 3
    valor_r:valor_d*0,7
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 3
    valor_r:valor_d*0,7
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 3
    valor_r:valor_d*0,7
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 3
    valor_r:valor_d*0,7
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 3
    valor_r:valor_d*0,7
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 3
    valor_r:valor_d*0,7
                     ^
SyntaxError: invalid syntax
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 3
    valor_r:valor_d*0,7
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:29:04)
-- CODE: 
valor_d=float(input("Valor em coroas dinamarquesas:"))

valor_r:valor_d*0,7

print(round(valor_r,2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 3
    valor_r:valor_d*0,7
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 3
    valor_r:valor_d*0,7
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 3
    valor_r:valor_d*0,7
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 3
    valor_r:valor_d*0,7
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 3
    valor_r:valor_d*0,7
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 3
    valor_r:valor_d*0,7
                     ^
SyntaxError: invalid syntax
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 3
    valor_r:valor_d*0,7
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:29:33)
-- CODE: 
valor_d=float(input("Valor em coroas dinamarquesas:"))

valor_r=valor_d*0.7

print(round(valor_r,2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Valor em coroas dinamarquesas:5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Valor em coroas dinamarquesas:2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Valor em coroas dinamarquesas:5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Valor em coroas dinamarquesas:10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Valor em coroas dinamarquesas:9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Valor em coroas dinamarquesas:4.2
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Valor em coroas dinamarquesas:6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:28:55)
-- CODE: 
  valor_d=float(input("Valor em coroas dinamarquesas:"))

valor_r:valor_d*0,7

print(round(valor_r,2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    valor_d=float(input("Valor em coroas dinamarquesas:"))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 1
    valor_d=float(input("Valor em coroas dinamarquesas:"))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    valor_d=float(input("Valor em coroas dinamarquesas:"))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 1
    valor_d=float(input("Valor em coroas dinamarquesas:"))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 1
    valor_d=float(input("Valor em coroas dinamarquesas:"))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 1
    valor_d=float(input("Valor em coroas dinamarquesas:"))
IndentationError: unexpected indent
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 1
    valor_d=float(input("Valor em coroas dinamarquesas:"))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:29:37)
-- CODE: 
valor_d=float(input("Valor em coroas dinamarquesas:"))

valor_r=valor_d*0.7

print(round(valor_r,2))


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Valor em coroas dinamarquesas:5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Valor em coroas dinamarquesas:2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Valor em coroas dinamarquesas:5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Valor em coroas dinamarquesas:10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Valor em coroas dinamarquesas:9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Valor em coroas dinamarquesas:4.2
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Valor em coroas dinamarquesas:6.3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
